# ddzstdbazel

./: BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  ddzstd.go  go.mod
conditionalzstd/: BUILD.bazel  conditionalzstd.go  conditionalzstd_nocgo.go
