# See rules_go bzlmod documentation:
# https://github.com/bazelbuild/rules_go/blob/master/docs/go/core/bzlmod.md

bazel_dep(name = "rules_go", version = "0.44.1")
bazel_dep(name = "gazelle", version = "0.35.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Use a specific version of Go, e.g. a pre-release version:
#go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
#go_sdk.download(version = "1.22rc1")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_datadog_zstd",
)
